--- a/src/favorites.html
+++ b/src/favorites.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YourEnergy</title>
+    <title>Your-Energy</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -49,7 +49,7 @@
                 <svg class="quote-inverted-commas-svg" width="20" height="20">
                   <use
                     class="inverted-commas-svg"
-                    href="/images/icons.svg#commas"
+                    href="/img/icons.svg#commas"
                   ></use>
                 </svg>
               </div>
@@ -66,7 +66,7 @@
                 <svg class="fav-min-icon" width="20" height="20">
                   <use
                     class="dumbbell-icon"
-                    href="/images/icons.svg#dumbbell"
+                    href="/img/icons.svg#dumbbell"
                   ></use>
                 </svg>
               <div class="fav-min-info">
@@ -82,14 +82,14 @@
                    loading="lazy"
                    sizes="(min-width: 1440px) 736px, (min-width: 768px) 704px, 335px"
                   srcset="
-                    ./images/favorite/women-working-out-mobile1x.webp   335w,
-                    ./images/favorite/women-working-out-mobile2x.webp   670w,
-                    ./images/favorite/women-working-out-tablet1x.webp    704w,
-                    ./images/favorite/women-working-out-tablet2x.webp  1472w,
-                    ./images/favorite/women-working-out-desktop1x.webp  736w,
-                    ./images/favorite/women-working-out-desktop2x.webp 1408w
+                    ./img/favorite/women-working-out-mobile1x.webp   335w,
+                    ./img/favorite/women-working-out-mobile2x.webp   670w,
+                    ./img/favorite/women-working-out-tablet1x.webp    704w,
+                    ./img/favorite/women-working-out-tablet2x.webp  1472w,
+                    ./img/favorite/women-working-out-desktop1x.webp  736w,
+                    ./img/favorite/women-working-out-desktop2x.webp 1408w
                   "
-                  src="./images/favorite/women-working-out-desktop1x.webp"
+                  src="./img/favorite/women-working-out-desktop1x.webp"
                   alt="women working out"
                 />
               </div>
