--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YourEnergy</title>
+    <title>Your-Energy</title>
     <link rel="preconnect" href="https://your-energy.b.goit.study/api">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
